# colcon-nano-ros

./: .envrc  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  setup.cfg
.github/workflows/: ci.yaml  release.yml  test-build.yml  wheels.yml
build-tools/: Cargo.toml
build-tools/cargo-ros2/src/: ament_installer.rs  lib.rs
build-tools/cargo-ros2/tests/fixtures/basic_project/: Cargo.toml
build-tools/colcon-cargo-ros2/: Cargo.toml  pyproject.toml
build-tools/colcon-cargo-ros2/colcon_cargo_ros2/: workspace_bindgen.py
build-tools/colcon-cargo-ros2/colcon_cargo_ros2/package_augmentation/: __init__.py
build-tools/colcon-cargo-ros2/colcon_cargo_ros2/task/ament_cargo/: build.py
build-tools/rosidl-bindgen/: Cargo.toml
build-tools/rosidl-bindgen/src/: ament.rs  embedded.rs  generator.rs  lib.rs
build-tools/rosidl-bindgen/templates/: action.rs.jinja  lib.rs.jinja  msg.rs.jinja  srv.rs.jinja
build-tools/rosidl-codegen/src/: generator.rs  idl_generator.rs  lib.rs  templates.rs  types.rs
build-tools/rosidl-codegen/templates/: action_idiomatic.rs.jinja  action_rmw.rs.jinja  message_idiomatic.rs.jinja  message_rmw.rs.jinja  service_idiomatic.rs.jinja  service_rmw.rs.jinja
build-tools/rosidl-codegen/tests/: compilation_test.rs  integration_test.rs
build-tools/rosidl-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
build-tools/rosidl-parser/src/idl/: lexer.rs  parser.rs
cargo-ros2-bindgen/: Cargo.toml
cargo-ros2-bindgen/src/: ament.rs  main.rs
cargo-ros2/src/: lib.rs  main.rs  workflow.rs
cargo-ros2/tests/fixtures/basic_project/src/: main.rs
cargo-ros2/tests/fixtures/project_with_deps/: Cargo.toml
cargo-ros2/tests/fixtures/project_with_deps/src/: main.rs
colcon-cargo-ros2/: Cargo.toml  setup.cfg
colcon-cargo-ros2/colcon_cargo_ros2/: workspace_bindgen.py
colcon-cargo-ros2/colcon_cargo_ros2/task/ament_cargo/: build.py
colcon-cargo-ros2/test/: test_flake8.py
colcon-cargo-ros2/test/rust-sample-package/: Cargo.toml
colcon_cargo_ros2/task/ament_cargo/: build.py  test.py
docs/: ROADMAP.md
docs/ROADMAP/: milestones.md  phase-4-integration.md  phase-5-idl-support.md
rosidl-bindgen/: Cargo.toml  build.rs
rosidl-bindgen/src/: embedded.rs  generator.rs
rosidl-bindgen/tests/: integration_tests.rs
rosidl-codegen/src/: templates.rs  types.rs
rosidl-codegen/templates/: action_idiomatic.rs.jinja  lib.rs.jinja  message_idiomatic.rs.jinja  message_rmw.rs.jinja  service_idiomatic.rs.jinja
rosidl-codegen/tests/: compilation_test.rs  test_template_fixes.rs
rosidl-parser/src/: lexer.rs
rosidl-runtime-rs/: Cargo.toml
rosidl-runtime-rs/src/: sequence.rs  traits.rs
test/: test_build.py
testing_workspaces/: README.md
testing_workspaces/complex_workspace/: README.md  justfile
testing_workspaces/complex_workspace/src/robot_controller/: .ros2_bindgen_cache  Cargo.toml  package.xml
testing_workspaces/complex_workspace/src/robot_controller/src/: main.rs
testing_workspaces/complex_workspace/src/robot_interfaces/: CMakeLists.txt  package.xml
testing_workspaces/complex_workspace/src/robot_interfaces/action/: Navigate.action  TestComplexAction.action
testing_workspaces/complex_workspace/src/robot_interfaces/msg/: RobotStatus.msg  SensorReading.msg  TestControl.msg  TestEdgeCases.msg  TestMoveit.msg  TestNav.msg
testing_workspaces/complex_workspace/src/robot_interfaces/srv/: SetMode.srv  TestComplexService.srv
testing_workspaces/minimal_path_test/: .gitignore  Cargo.toml  README.md
testing_workspaces/minimal_path_test/src/: lib.rs
testing_workspaces/minimal_path_test/src/msg/: bool_idiomatic.rs  string_idiomatic.rs
testing_workspaces/minimal_path_test/src/msg/rmw/: bool_rmw.rs  string_rmw.rs
testing_workspaces/my_robot_node/: justfile
testing_workspaces/orchestration_e2e/: README.md
testing_workspaces/orchestration_e2e/artifacts/: talker.metadata.json
testing_workspaces/orchestration_e2e/src/c_counter/: counter.c
testing_workspaces/orchestration_e2e/src/cpp_counter/: counter.cpp
testing_workspaces/orchestration_e2e/src/demo_pkg/: Cargo.toml  package.xml
testing_workspaces/orchestration_e2e/src/demo_pkg/launch/: system.launch.xml
testing_workspaces/orchestration_e2e/src/demo_pkg/manifest/: system.launch.yaml
testing_workspaces/orchestration_e2e/src/demo_pkg/src/: lib.rs
user-libs/: Cargo.toml
user-libs/rclrs/: Cargo.toml
user-libs/rosidl-runtime-rs/: Cargo.toml  build.rs
user-libs/rosidl-runtime-rs/src/: ffi.rs  lib.rs  string.rs
user-libs/rosidl_runtime_rs/src/: ffi.rs  lib.rs  sequence.rs  string.rs
