[workspace]
resolver = "2"
members = [
    "cargo-ros2-bindgen",
    "rosidl-parser",
    "rosidl-codegen",
    "rosidl-runtime-rs",
]
exclude = [
    "colcon-cargo-ros2/test/rust-sample-package",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["cargo-ros2 contributors"]
repository = "https://github.com/rosrust/colcon-cargo-ros2"

[workspace.dependencies]
# Shared dependencies across workspace members
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Workspace member dependencies
rosidl-parser = { path = "rosidl-parser" }
rosidl-codegen = { path = "rosidl-codegen" }
rosidl-runtime-rs = { path = "rosidl-runtime-rs" }

[profile.dev-release]
inherits = "release"
debug = true
strip = false
