[package]
name = "rosidl-bindgen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust binding generator for ROS 2 interface packages"

[lib]
name = "rosidl_bindgen"
path = "src/lib.rs"

[[bin]]
name = "rosidl-bindgen"
path = "src/main.rs"

[dependencies]
clap.workspace = true
eyre = "0.6"
serde.workspace = true
serde_json.workspace = true
rosidl-codegen.workspace = true
rosidl-parser.workspace = true

[dev-dependencies]
tempfile = "3.8"
