<?xml version="1.0"?>
<package format="3">
  <name>robot_controller</name>
  <version>0.1.0</version>
  <description>Rust robot controller using standard and custom interfaces</description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <depend>robot_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>cargo_ros2</build_type>
  </export>
</package>
