<?xml version="1.0"?>
<package format="3">
  <name>robot_interfaces</name>
  <version>0.1.0</version>
  <description>Custom ROS 2 interfaces for robot controller</description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Core test packages for parser edge cases -->
  <depend>test_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>control_msgs</depend>
  <depend>nav2_msgs</depend>

  <!-- Comprehensive coverage packages -->
  <depend>tf2_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>composition_interfaces</depend>
  <depend>rosbag2_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
